--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <h2>Clear and Professional Introduction</h2>
         <p>Introduce yourself with a brief and clear statement about who you are and what you do. Include your current role and expertise.</p>
         <!-- Add an image here -->
-        <img src="Image & logo/photo.jfif" alt="Your Image">
+        <img src="photo.jfif" alt="Your Image">
     </section>
 
     <section id="about">
@@ -176,7 +176,7 @@
         <!-- Add an image or video here -->
         <div id="video-container">
             <!-- Replace the video URL with your actual video URL -->
-            <iframe src="Image & logo/Follow us.mp4" frameborder="0" allowfullscreen></iframe>
+            <iframe src="Follow us.mp4" frameborder="0" allowfullscreen></iframe>
         </div>
     </section>
 
