--- a/Blogs.html
+++ b/Blogs.html
@@ -54,22 +54,22 @@
 
         <div class="blog-images">
             <div class="blog-image">
-                <img src="Image & logo/blog 1.avif" alt="Blog Image 1">
+                <img src="blog 1.avif" alt="Blog Image 1">
             </div>
             <div class="blog-image">
-                <img src="Image & logo/blog 2.avif" alt="Blog Image 2">
+                <img src="blog 2.avif" alt="Blog Image 2">
             </div>
             <div class="blog-image">
-                <img src="Image & logo/blog 3.avif" alt="Blog Image 3">
+                <img src="blog 3.avif" alt="Blog Image 3">
             </div>
             <div class="blog-image">
-                <img src="Image & logo/blog 4.avif" alt="Blog Image 4">
+                <img src="blog 4.avif" alt="Blog Image 4">
             </div>
             <div class="blog-image">
-                <img src="Image & logo/blog 5.avif" alt="Blog Image 5">
+                <img src="blog 5.avif" alt="Blog Image 5">
             </div>
             <div class="blog-image">
-                <img src="Image & logo/blog 6.avif" alt="Blog Image 6">
+                <img src="blog 6.avif" alt="Blog Image 6">
             </div>
         </div>
     </div>
