--- a/Home.html
+++ b/Home.html
@@ -90,7 +90,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>Hi, I'm [Your Name], a passionate web developer. I specialize in creating modern and responsive websites.</p>
-            <img src="Image & logo/photo.jfif" alt="Profile Image">
+            <img src="photo.jfif" alt="Profile Image">
         </section>
 
         <section id="portfolio">
